# cgProject

./: .gitignore  CMakeLists.txt  Makefile
source/: imageWriter.h  main.cpp  mesh.cpp  raytracing.cpp  traqueboule.h
